--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -64,7 +64,7 @@
 		<div class="w3-cen">
 			<h4>Make better choice!</h4>
 			<h1 class="w3-xxxlarge w3-animate-bottom">
-				<img src="img/res2.png" width="100" height="200">플레이데이터 주변 맛집
+				플레이데이터 주변 맛집
 				추천
 			</h1>
 			<div class="w3-padding-32"></div>
