--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,10 +3,9 @@
 <head>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-
 <style>
 .button {
-	background-color: #e7e7e7;
+	background-color: #E7E7E7;
 	color: black;
 	border: none;
 	color: black;
@@ -19,21 +18,15 @@
 	cursor: pointer;
 }
 .container {
-
   border: 3px solid #fff;
-  padding: 10px; 
-
+  padding: 10px;
 }
-
 .w3-center{
 	width: 140%;
     float: center;
     padding: 2rem;
-
 }
-
 </style>
-
 <title>맛집 추천</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,8 +37,6 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-
-
 	<nav class="w3-sidebar w3-bar-block w3-card w3-animate-left w3-center"
 		style="display:none" id="mySidebar">
 	<h1 class="w3-xxxlarge w3-text-theme">Navigation</h1>
@@ -55,8 +46,6 @@
 	<a href="total?command=restaurantgetAll" class="w3-bar-item w3-button">1.모든
 		레스토랑 보기</a> <a href="categoryList.jsp" class="w3-bar-item w3-button">2.
 		레스토랑 추천 받기</a> </nav>
-
-
 	<center>
 		<header class="w3-container w3-theme w3-padding" id="myHeader">
 		<i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i>
@@ -69,7 +58,6 @@
 			<div class="w3-padding-32"></div>
 		</div>
 	</center>
-              
 	</header>
 	<br>
 	<br>
@@ -78,9 +66,7 @@
 	
 		<img src="img/a1.png">	
 		<hr>
-
 		<div class="w3-row-padding w3-center w3-margin-top">
-
 		<div class="container">
 		<div class="one">
 			<div class="w3-third">
@@ -93,7 +79,6 @@
 					<br> <i class="fa fa-desktop w3-margin-bottom w3-text-theme"
 						style="font-size: 120px"></i>
 					<p>Administrators only</p>
-
 				</div>
 			</div>
 			</div>
@@ -104,12 +89,10 @@
 						Find Restaurants <br> &nbsp;&nbsp;&nbsp;<a
 							href="categoryList.jsp"><button class="button button">click
 								me!</button></a>
-
 					</h3>
 					<br> <i class="fa fa-cutlery w3-margin-bottom w3-text-theme"
 						style="font-size: 120px"></i>
 					<p>Find your perfect restaurants!</p>
-
 				</div>
 			</div>
 			</div>
@@ -117,7 +100,6 @@
 		</div>
 	</center>
 	<script>
-
 		function w3_open() {
 			var x = document.getElementById("mySidebar");
 			x.style.width = "100%";
@@ -128,7 +110,6 @@
 		function w3_close() {
 			document.getElementById("mySidebar").style.display = "none";
 		}
-
 		
 		
 	</script>
